kjwikigdocker-deployment-emptydir.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kjwikigdocker
  labels:
    app: kjwiwikigdocker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kjwikigdocker
  template:
    metadata:
      labels:
        app: kjwikigdocker
    spec:
      containers:
      - name: kjwikigdocker-container
        image: georgesan/kjwikigdocker:latest
        ports:
        - name: kjwikigdocker
          containerPort: 8080
        volumeMounts:
        - name: kjwikig-data-volume
          mountPath: /var/lib/kjwikigdocker
      volumes:
        - name: kjwikig-data-volume
          emptyDir: {}
