kjwikigdocker-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: kjwikigdocker
  labels:
    app: kjwikigdocker
spec:
  type: NodePort
  ports:
  - port: 8080
    name: port8080
    nodePort: 30080
  selector:
    app: kjwikigdocker
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kjwikigdocker
  # if you want dynamic persistent volume , un-comment below
  # annotations:
  #   volume.kubernetes.io/storage-class: "nfs-client"
  labels:
    app: kjwikigdocker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kjwikigdocker
  serviceName: kjwikigdocker
  template:
    metadata:
      labels:
        app: kjwikigdocker
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: kjwikigdocker-container
        image: georgesan/kjwikigdocker:latest
        ports:
        - name: port8080
          containerPort: 8080
        # volumeMounts:
        # - name: kjwikig-data-volume
        #   mountPath: /var/lib/kjwikigdocker
  # volumeClaimTemplates:
  # - metadata:
  #     name: kjwikig-data-volume
  #   spec:
  #     accessModes: [ "ReadWriteOnce" ]
  #     storageClassName: "nfs-client"
  #     resources:
  #       requests:
  #         storage: 1Gi
