kjwikigdocker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kjwikigdocker
  annotations:
    # for accept large file post
    # see https://github.com/kubernetes/ingress-nginx
    # see https://github.com/kubernetes/ingress-nginx/blob/master/docs/user-guide/annotations.md
    nginx.ingress.kubernetes.io/proxy-body-size: 1560m
  labels:
    app: kjwikigdocker
spec:
  rules:
  - http:
      paths:
      - path: /kjwikigdocker
        pathType: Prefix
        backend:
          service:
            name: kjwikigdocker
            port:
              number: 8080
